--- a/code/Blazora/Components/Quest_Info.razor
+++ b/code/Blazora/Components/Quest_Info.razor
@@ -24,6 +24,7 @@
     padding: 16px;
     border: 1px solid black;
     background-color: #FFF7D1;
+    margin-left: @($"{Program.cell_size}px");
     ">
 
     <div style="">
