--- a/code/Blazora/Components/Game_Component.razor
+++ b/code/Blazora/Components/Game_Component.razor
@@ -20,6 +20,12 @@
     public string id = "GC_Unknown";
 
     public List<Game_Component> list_child = new List<Game_Component> ();
+
+    public static string color_light_green = "#8BFF5A";
+    public static string color_light_orange = "#FF924F";
+    public static string color_light_blue = "#9D99FF";
+    public static string color_light_red = "#A33E42";
+
 }
 
 
