Remove secondary pages

--- a/code/Idle_Factorio/Shared/NavMenu.razor
+++ b/code/Idle_Factorio/Shared/NavMenu.razor
@@ -1,5 +1,5 @@
 ﻿<div class="top-row pl-4 navbar navbar-dark">
-    <a class="navbar-brand" href="">Blazora</a>
+    <a class="navbar-brand" href="">Idle Factorio</a>
     <button class="navbar-toggler" @onclick="ToggleNavMenu">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -9,27 +9,7 @@
     <ul class="nav flex-column">
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="factorio">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Factorio
-            </NavLink>
-        </li>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="guerre">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Guerre
-            </NavLink>
-        </li>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
-            </NavLink>
-        </li>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
-            </NavLink>
-        </li>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="test">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Test
+                <span class="oi oi-list-rich" aria-hidden="true"></span> The Game
             </NavLink>
         </li>
     </ul>
