--- a/code/Idle_Factorio/Components/Ending_Panel.razor
+++ b/code/Idle_Factorio/Components/Ending_Panel.razor
@@ -40,7 +40,10 @@ else
         width: 324px;
         ">
     <div style="font-size: 30px; text-align: center;">
-        YOU WON
+        YOU WON!
+    </div>
+    <div style="font-size: 25px; text-align: center;">
+        Thank you for playing!
     </div>
 
     <div style="margin-top: 20px;">
