--- a/code/Idle_Factorio/Pages/Factorio.razor
+++ b/code/Idle_Factorio/Pages/Factorio.razor
@@ -54,8 +54,8 @@
     <p>Share the game on Reddit, Facebook, Twitter, and everywhere else!</p>
     <p>
         Idle Factorio is a game made by 
-        <img class="smicon" src="images/marc_kruzik_2021-round-48px.png"> Marc Kruzik (
-        <img class="smicon" src="images/linkedin_logo.png"> <a href="https://www.linkedin.com/in/marckruzik" target="_blank">LinkedIn</a>, 
+        <img class="smicon" src="images/marc_kruzik_2021-round-48px.png"> Marc Kruzik
+        (<img class="smicon" src="images/linkedin_logo.png"> <a href="https://www.linkedin.com/in/marckruzik" target="_blank">LinkedIn</a>, 
         <img class="smicon" src="images/twitter_logo.png"> <a href="https://twitter.com/MarcKruzik" target="_blank">Twitter</a>,  
         <img class="smicon" src="images/website_logo.png"> <a href="http://www.marckruzik.fr" target="_blank">Website</a>), 
         using 100% <img class="smicon" src="images/blazor.png"> Blazor (no JavaScript, no CSS animations). 
